--- a/django/{{cookiecutter.project_slug}}/templates/accounts/login.html
+++ b/django/{{cookiecutter.project_slug}}/templates/accounts/login.html
@@ -1,16 +1,17 @@
-{% raw %}{% load static %}
+{% load static %}
+{% load crispy_forms_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{% endraw %}{{ cookiecutter.project_name }}{% raw %} &mdash; {{ page_title }}</title>
+    <title>Ninja Tribe Project &mdash; {{ page_title }}</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
           integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700" rel="stylesheet">
 
-    <link rel="stylesheet" href="{% static 'dashboard/css/black-dashboard.min.css' %}">
+    <link rel="stylesheet" href="{% static 'dashboard/css/black-dashboard.css' %}">
     <link rel="stylesheet" href="{% static 'dashboard/css/nucleo-icons.css' %}">
 
     {% block header_css %} {% endblock %}
@@ -18,30 +19,34 @@
 
 </head>
 <body>
-<div class="form-screen">
-    <a href="/" class="spur-logo"><i class="fas fa-bolt"></i> <span>{% endraw %}{{ cookiecutter.project_name }}{% raw %}</span></a>
-    <div class="card account-dialog">
-        <div class="card-header bg-primary text-white"> Please sign in</div>
-        <div class="card-body">
-            <form method="post" action="">
-                {% csrf_token %}
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-md-4 offset-4">
+            <a href="/" class="spur-logo"><i class="fas fa-bolt"></i> <span>Ninja Tribe Project</span></a>
+            <div class="card account-dialog">
+                <div class="card-header bg-primary text-white"> Please sign in</div>
+                <div class="card-body">
+                    <form method="post" action="">
+                        {% csrf_token %}
 
-                {{ form|crispy }}
+                        {{ form|crispy }}
 
-                <button class="btn btn-lg btn-primary btn-block text-uppercase font-weight-bold mb-2"
-                        type="submit">Submit
-                </button>
-            </form>
-        </div>
-        <div class="container-fluid">
-                {% if messages %}
-                    {% for message in messages %}
-                        <div class="alert alert-{% if message.tags %}{{ message.tags }}{% endif %}">
-                            {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}ERROR: {% endif %}
-                            {{ message }}
-                        </div>
-                    {% endfor %}
-                {% endif %}
+                        <button class="btn btn-lg btn-primary btn-block text-uppercase font-weight-bold mb-2"
+                                type="submit">Submit
+                        </button>
+                    </form>
+                </div>
+                <div class="container-fluid">
+                    {% if messages %}
+                        {% for message in messages %}
+                            <div class="alert alert-{% if message.tags %}{{ message.tags }}{% endif %}">
+                                {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}ERROR: {% endif %}
+                                {{ message }}
+                            </div>
+                        {% endfor %}
+                    {% endif %}
+                </div>
+            </div>
         </div>
     </div>
 </div>
@@ -57,4 +62,3 @@
 
 </body>
 </html>
-{% endraw %}
