--- a/user_context_views/{{cookiecutter.user}}_dashboard/templates/{{cookiecutter.module}}/list.html
+++ b/user_context_views/{{cookiecutter.user}}_dashboard/templates/{{cookiecutter.module}}/list.html
@@ -7,7 +7,8 @@
 {% block page_wrapper_contents %}{% endraw %}
     <div class="card mb-3">
         <div class="card-header">
-            <h4 class="card-title">{% raw %}{{ page_title }}{% endraw %}</h4>
+            <h4 class="card-title float-left">{% raw %}{{ page_title }}{% endraw %}</h4>
+            <a class="btn btn-primary btn-sm float-left ml-2 pt-0 pb-1" href="{% raw %}{%{% endraw %} url '{{cookiecutter.user}}_dashboard_{{cookiecutter.module}}_create' obj.pk {% raw %}%}{% endraw %}"><i class="tim-icons icon-simple-add"></i></a>
         </div>
         <div class="card-body">
             <nav aria-label="breadcrumb" role="navigation">
