--- a/django/{{cookiecutter.project_slug}}/templates/accounts/login.html
+++ b/django/{{cookiecutter.project_slug}}/templates/accounts/login.html
@@ -1,21 +1,21 @@
-{% load static %}
-{% load crispy_forms_tags %}
+{% raw %}{% load static %}
+{% load crispy_forms_tags %}{% endraw %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ninja Tribe Project &mdash; {{ page_title }}</title>
+    <title>Project &mdash; </title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
           integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700" rel="stylesheet">
 
-    <link rel="stylesheet" href="{% static 'dashboard/css/black-dashboard.css' %}">
-    <link rel="stylesheet" href="{% static 'dashboard/css/nucleo-icons.css' %}">
+    {% raw %}<link rel="stylesheet" href="{% static 'dashboard/css/black-dashboard.css' %}">
+    <link rel="stylesheet" href="{% static 'dashboard/css/nucleo-icons.css' %}">{% endraw %}
 
-    {% block header_css %} {% endblock %}
-    {% block header_js %} {% endblock %}
+    {% raw %}{% block header_css %} {% endblock %}
+    {% block header_js %} {% endblock %}{% endraw %}
 
 </head>
 <body>
@@ -27,9 +27,9 @@
                 <div class="card-header bg-primary text-white"> Please sign in</div>
                 <div class="card-body">
                     <form method="post" action="">
-                        {% csrf_token %}
+                        {% raw %}{% csrf_token %}{% endraw %}
 
-                        {{ form|crispy }}
+                        {% raw %}{{ form|crispy }}{% endraw %}
 
                         <button class="btn btn-lg btn-primary btn-block text-uppercase font-weight-bold mb-2"
                                 type="submit">Submit
@@ -37,28 +37,28 @@
                     </form>
                 </div>
                 <div class="container-fluid">
-                    {% if messages %}
+                    {% raw %}{% if messages %}
                         {% for message in messages %}
                             <div class="alert alert-{% if message.tags %}{{ message.tags }}{% endif %}">
                                 {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}ERROR: {% endif %}
                                 {{ message }}
                             </div>
                         {% endfor %}
-                    {% endif %}
+                    {% endif %}{% endraw %}
                 </div>
             </div>
         </div>
     </div>
 </div>
 
-<script src="{% static 'dashboard/js/black-dashboard.min.js' %}"></script>
+{% raw %}<script src="{% static 'dashboard/js/black-dashboard.min.js' %}"></script>
 <script src="{% static 'dashboard/js/core/jquery.min.js' %}"></script>
 <script src="{% static 'dashboard/js/core/bootstrap.min.js' %}"></script>
-<script src="{% static 'dashboard/js/core/popper.min.js' %}"></script>
+<script src="{% static 'dashboard/js/core/popper.min.js' %}"></script>{% endraw %}
 
-{% block scripts %}
+{% raw %}{% block scripts %}
 
-{% endblock %}
+{% endblock %}{% endraw %}
 
 </body>
 </html>
